Update README with enhanced styling and badges